--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/tabla-disponibilidad-material/tabla-disponibilidad-material.component.scss
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/tabla-disponibilidad-material/tabla-disponibilidad-material.component.scss
@@ -7,10 +7,6 @@
     margin-right: 1em;
 };
 
-.btn-color {
-    background-color: #d1d1d1 !important;
-};
-
 .h-2em {
     height: 2em;
 };
@@ -69,3 +65,7 @@
 tr.mat-header-row {
     height: 15px;
 }
+
+.btn-color {
+    background-color:#fdc101 !important;
+};
