--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/alertas-relevantes/alertas-relevantes.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/alertas-relevantes/alertas-relevantes.component.html
@@ -33,6 +33,7 @@
                                 <quill-editor   class="quill-editor-style card-80em position-relative"
                                                 [styles]="editorStyle"
                                                 [modules]="config"
+                                                style="width: 100%;"
                                                 (onContentChanged)="maxLength($event, 2000)"
                                                 formControlName="alerta"
                                                 #obsAlertasRelevantes
