--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/gestion-sst/gestion-sst.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/gestion-sst/gestion-sst.component.html
@@ -76,6 +76,7 @@
                                     <quill-editor   class="quill-editor-style card-80em position-relative"
                                                     [styles]="editorStyle"
                                                     [modules]="config"
+                                                    style="width: 100%;"
                                                     (onContentChanged)="maxLength($event, 200)"
                                                     formControlName="temaCapacitacion"
                                                     #obsTemaCapacitacion
@@ -91,7 +92,7 @@
                               </div>
                             </div>
                         </div>
-                        <div class="row">
+                        <div class="row" style="margin-top: 3em;">
                             <div class="col-md-12">
                                 <div class="row">
                                     <div class="pr-1">
