--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/tabla-avance-resumen-alertas/tabla-avance-resumen-alertas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/tabla-avance-resumen-alertas/tabla-avance-resumen-alertas.component.html
@@ -45,8 +45,8 @@
                       color="accent" 
                       class="btn-table expansion-style--title btn-color h-2em"
                       style="width: 90%;"
-                      [disabled]="resumen.seguimientoDiarioObservaciones.length === 0"
-                      (click)="openDialogObservaciones( resumen.seguimientoDiarioObservaciones[0].observaciones, resumen )">
+                      [disabled]="resumen.disponibilidadPersonalObservaciones === undefined"
+                      (click)="openDialogObservaciones( resumen )">
                       <small>Observaciones</small>
               </button>
             </div>
@@ -64,6 +64,3 @@
     
     <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
 </section>
-
-<!-- Ver detalle -->
-<section class="table-responsive size-table" *ngIf="esVerDetalle === true"></section>
