--- a/asivamosffie.web/asivamosffie/src/app/_pages/registro-seguimiento-diario/components/ver-bitacora/ver-bitacora.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registro-seguimiento-diario/components/ver-bitacora/ver-bitacora.component.html
@@ -53,7 +53,19 @@
       <!-- estadoSeguimiento Column -->
       <ng-container matColumnDef="estadoCodigo">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Estado del seguimiento diario</th>
-        <td mat-cell *matCellDef="let element">{{element.estadoDescripcion}}</td>
+
+        <td mat-cell *matCellDef="let element" >
+
+          {{ ['2','3'].includes(element.estadoCodigo) ? element.estadoNombre : element.estadoDescripcion }}
+
+        </td>
+
+        <!-- <td mat-cell *matCellDef="let element" *ngIf="['1','4','5','6','7'].includes(element.estadoCodigo)">
+
+          {{ ['2','3'].includes(element.estadoCodigo) ? element.estadoNombre : element.estadoDescripcion : }}
+
+        </td> -->
+
       </ng-container>
 
       <!-- Id Column -->
