--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/tabla-liquidacion-obra-gtlc/tabla-liquidacion-obra-gtlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/tabla-liquidacion-obra-gtlc/tabla-liquidacion-obra-gtlc.component.html
@@ -14,7 +14,8 @@
             <td mat-cell *matCellDef="let element"> <b>{{element.fechaAprobacion}}</b> </td>
         </ng-container>
         <ng-container matColumnDef="fechaActualizacionPoliza">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 10%;"> Fecha de actualización de póliza </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 10%;"> Fecha de actualización de póliza
+            </th>
             <td mat-cell *matCellDef="let element"> <b>{{element.fechaActualizacionPoliza}}</b> </td>
         </ng-container>
         <ng-container matColumnDef="numeroSolicitud">
@@ -39,9 +40,11 @@
         </ng-container>
         <ng-container matColumnDef="gestion">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Gestión </th>
-            <td mat-cell *matCellDef="let element"> 
-                <a [routerLink]="['verificarRequisitos', element.id]" mat-raised-button color="accent"
-                    class="btn-table">Verificar requisitos para liquidación </a>    
+            <td mat-cell *matCellDef="let element">
+                <a [routerLink]="['verificarRequisitos', element.id]" mat-raised-button color="accent" class="btn-table"
+                    *ngIf="element.estadoVerifiacion=='Sin verificación'">Verificar requisitos para liquidación </a>
+                <a [routerLink]="['verDetalleVerificacion', element.id]" mat-raised-button color="accent" class="btn-table"
+                    *ngIf="element.estadoVerifiacion!='Sin verificación'">Ver detalle</a>
             </td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
