--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/tabla-registrar-avance-semanal/tabla-registrar-avance-semanal.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/tabla-registrar-avance-semanal/tabla-registrar-avance-semanal.component.html
@@ -58,7 +58,7 @@
                 class="btn-table"
                 *ngIf="element.verReportarSeguimientoSemanal === true && element.fechaUltimoReporte === 'Sin registro' && element.fechaModificacion === undefined"
                 [routerLink]="[ 'registroSeguimientoSemanal', element.contratacionProyectoId ]">
-                Registrar seguimiento semanal
+                Registrar avance semanal
         </button>
         <button mat-raised-button
                 color="accent" 
