--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-contractuales/components/form-contratacion-registrados/form-contratacion-registrados.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-contractuales/components/form-contratacion-registrados/form-contratacion-registrados.component.html
@@ -91,6 +91,11 @@
           </mat-card>
         </div>
 
+        <div class="text-center" style="width: 20%;display: inline-block;">
+          <button mat-raised-button color="accent" class="btn-table" (click)="getDocumento( form.get( 'rutaDocumento' ).value )">
+            Descargar documento
+          </button>
+        </div>
       </mat-expansion-panel>
     </mat-accordion>
   </div>
