--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/form-registrar-seguimiento-semanal/form-registrar-seguimiento-semanal.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/form-registrar-seguimiento-semanal/form-registrar-seguimiento-semanal.component.html
@@ -7,7 +7,7 @@
 
     <div class="text-center">
         <h1 class="title-menu--h1">
-            Registrar seguimiento semanal {{ seguimientoSemanal.contratacionProyecto.proyecto.llaveMen }}
+            Registrar avance semanal {{ seguimientoSemanal.contratacionProyecto.proyecto.llaveMen }}
         </h1>
     </div>
 
