--- a/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/revision-acta/revision-acta.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/revision-acta/revision-acta.component.html
@@ -41,7 +41,7 @@
             <mat-expansion-panel class="expansion-style sub-expansion">
               <mat-expansion-panel-header
                 class="expansion-style--header"
-                *ngIf="sesionComite.tipoSolicitudCodigo === '1'"
+                *ngIf="sesionComite.tipoSolicitudCodigo === tipoSolicitudCodigo.procesoSeleccion"
               >
                 <mat-panel-title class="expansion-style--title sub-expansion">
                   <b>Solicitud {{ sesionComite.procesoSeleccion.numeroProceso }}</b>
@@ -49,10 +49,26 @@
               </mat-expansion-panel-header>
               <mat-expansion-panel-header
                 class="expansion-style--header"
-                *ngIf="sesionComite.tipoSolicitudCodigo === '2'"
+                *ngIf="sesionComite.tipoSolicitudCodigo === tipoSolicitudCodigo.contratacion"
               >
                 <mat-panel-title class="expansion-style--title sub-expansion">
                   <b>Solicitud {{ sesionComite.numeroSolicitud }}</b>
+                </mat-panel-title>
+              </mat-expansion-panel-header>
+              <mat-expansion-panel-header
+              class="expansion-style--header"
+              *ngIf="sesionComite.tipoSolicitudCodigo === tipoSolicitudCodigo.modificacionContractual"
+            >
+              <mat-panel-title class="expansion-style--title sub-expansion">
+                <b>Solicitud {{ sesionComite.novedadContractual.numeroSolicitud }} </b>
+              </mat-panel-title>
+            </mat-expansion-panel-header>
+              <mat-expansion-panel-header
+                class="expansion-style--header"
+                *ngIf="sesionComite.tipoSolicitudCodigo === tipoSolicitudCodigo.controversiaContractual"
+              >
+                <mat-panel-title class="expansion-style--title sub-expansion">
+                  <b>Solicitud {{ sesionComite.controversiaContractual.numeroSolicitud }} </b>
                 </mat-panel-title>
               </mat-expansion-panel-header>
 
@@ -60,13 +76,12 @@
             </mat-expansion-panel>
           </mat-accordion>
         </section>
-
-        <section *ngIf="acta.sesionComiteSolicitudComiteTecnicoFiduciario !== null">
+        <section *ngIf="acta.sesionComiteSolicitudComiteTecnicoFiduciario !== undefined">
           <mat-accordion *ngFor="let sesionComite of acta.sesionComiteSolicitudComiteTecnicoFiduciario">
             <mat-expansion-panel class="expansion-style sub-expansion">
               <mat-expansion-panel-header
                 class="expansion-style--header"
-                *ngIf="sesionComite.tipoSolicitudCodigo === '1'"
+                *ngIf="sesionComite.tipoSolicitudCodigo === tipoSolicitudCodigo.procesoSeleccion"
               >
                 <mat-panel-title class="expansion-style--title sub-expansion">
                   <b>Solicitud {{ sesionComite.procesoSeleccion.numeroProceso }}</b>
@@ -74,10 +89,26 @@
               </mat-expansion-panel-header>
               <mat-expansion-panel-header
                 class="expansion-style--header"
-                *ngIf="sesionComite.tipoSolicitudCodigo === '2'"
+                *ngIf="sesionComite.tipoSolicitudCodigo === tipoSolicitudCodigo.contratacion"
               >
                 <mat-panel-title class="expansion-style--title sub-expansion">
                   <b>Solicitud {{ sesionComite.contratacion.numeroSolicitud }}</b>
+                </mat-panel-title>
+              </mat-expansion-panel-header>
+              <mat-expansion-panel-header
+              class="expansion-style--header"
+              *ngIf="sesionComite.tipoSolicitudCodigo === tipoSolicitudCodigo.modificacionContractual"
+            >
+              <mat-panel-title class="expansion-style--title sub-expansion">
+                <b>Solicitud {{ sesionComite.novedadContractual.numeroSolicitud }} </b>
+              </mat-panel-title>
+            </mat-expansion-panel-header>
+              <mat-expansion-panel-header
+                class="expansion-style--header"
+                *ngIf="sesionComite.tipoSolicitudCodigo === tipoSolicitudCodigo.controversiaContractual"
+              >
+                <mat-panel-title class="expansion-style--title sub-expansion">
+                  <b>Solicitud {{ sesionComite.controversiaContractual.numeroSolicitud }} </b>
                 </mat-panel-title>
               </mat-expansion-panel-header>
 
@@ -115,6 +146,17 @@
                     <div class="text-color" [innerHTML]="innerObservacion(tema.observaciones)"></div>
                   </section>
                   <h2 class="card-subTitle">Decisiones</h2>
+                  <div class="reparacion-card row">
+                    <div class="col-md-4">
+                      Resultado de la votación <b class="color-blue"> {{ tema.resultadoVotacion }} </b>
+                    </div>
+                    <div class="col-md-4 info-text completo">
+                      Aprobó <b class="color-blue"> {{ tema.totalAprobado }} </b>
+                    </div>
+                    <div class="col-md-4 info-text sin-diligenciar">
+                      No aprobó <b class="color-blue"> {{ tema.totalNoAprobado }} </b>
+                    </div>
+                  </div>
                   <p>
                     <b>Estado de la solicitud</b>: <span class="text-color"> {{ tema.estadoTemaCodigo }} </span>
                   </p>
@@ -200,6 +242,17 @@
                     <div class="text-color" [innerHTML]="innerObservacion(tema.observaciones)"></div>
                   </section>
                   <h2 class="card-subTitle">Decisiones</h2>
+                  <div class="reparacion-card row">
+                    <div class="col-md-4">
+                      Resultado de la votación <b class="color-blue"> {{ tema.resultadoVotacion }} </b>
+                    </div>
+                    <div class="col-md-4 info-text completo">
+                      Aprobó <b class="color-blue"> {{ tema.totalAprobado }} </b>
+                    </div>
+                    <div class="col-md-4 info-text sin-diligenciar">
+                      No aprobó <b class="color-blue"> {{ tema.totalNoAprobado }} </b>
+                    </div>
+                  </div>
                   <p>
                     <b>Estado de la solicitud</b>: <span class="text-color"> {{ tema.estadoTemaCodigo }} </span>
                   </p>
