Integración 5.1.5 pantalla ppal

--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-transferencia-etc/components/registrar-entrega/registrar-entrega.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-transferencia-etc/components/registrar-entrega/registrar-entrega.component.html
@@ -7,7 +7,11 @@
   <div class="text-center">
     <h1 class="title-menu--h1">Registrar entrega LL457326</h1>
     <p class="colorMainColor mt-05em">
-      Número de contrato:
+      Número de contrato Obra:
+      <b> N801801 </b>
+    </p>
+    <p class="colorMainColor mt-05em">
+      Número de contrato Interventoria:
       <b> N801801 </b>
     </p>
   </div>
