--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-transferencia-etc/components/tabla-proyectos/tabla-proyectos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-transferencia-etc/components/tabla-proyectos/tabla-proyectos.component.html
@@ -11,12 +11,12 @@
 <div class="table-responsive mb-2em">
   <table mat-table [dataSource]="dataSource" matSort>
     <!-- fechaTerminacion Column -->
-    <ng-container matColumnDef="fechaTerminacion">
+    <ng-container matColumnDef="fechaSuscripcion">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
         Fecha de terminación del proyecto
       </th>
       <td mat-cell *matCellDef="let element">
-        <b>{{ element.fechaTerminacion }}</b>
+        <b>{{ element.fechaSuscripcion }}</b>
       </td>
     </ng-container>
 
@@ -55,32 +55,32 @@
     </ng-container>
 
     <!-- estadoEntrega Column -->
-    <ng-container matColumnDef="estadoEntrega">
+    <ng-container matColumnDef="estadoEntregaETCString">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
         Estado de la entrega
       </th>
       <td mat-cell *matCellDef="let element">
-        {{ element.estadoEntrega }}
+        {{ element.estadoEntregaETCString }}
       </td>
     </ng-container>
 
     <!-- estadoRegistro Column -->
-    <ng-container matColumnDef="estadoRegistro">
+    <ng-container matColumnDef="registroCompletoEntregaETC">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
         Estado del registro
       </th>
       <td mat-cell *matCellDef="let element">
         <span
           class="info-text d-block m-0"
-          [class.sin-diligenciar]="true"
-          [class.completo]="false"
+          [class.sin-diligenciar]="element.registroCompletoEntregaETC === false"
+          [class.completo]="element.registroCompletoEntregaETC === true"
         ></span>
-        {{ element.estadoRegistro }}
+        {{ element.registroCompletoEntregaETC ? "Completo" : "Incompleto" }}
       </td>
     </ng-container>
 
     <!-- id Column -->
-    <ng-container matColumnDef="id">
+    <ng-container matColumnDef="informeFinalId">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
         Gestión
       </th>
@@ -90,7 +90,7 @@
           mat-raised-button
           color="accent"
           class="btn-table"
-          [routerLink]="['registrarEntrega', element.id]"
+          [routerLink]="['registrarEntrega', element.informeFinalId]"
         >
         Revisar informe
         </a>
