--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/form-descripcion-actuacion/form-descripcion-actuacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/form-descripcion-actuacion/form-descripcion-actuacion.component.html
@@ -97,7 +97,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row"
+            <div class="row animatedDown"
                 *ngIf="addressForm.controls.actuacionAdelantada.value && addressForm.controls.actuacionAdelantada.value.codigo == '4'">
                 <div class="col-md-12" style="padding-left: 0;">
                     <div class="row">
@@ -110,7 +110,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row"
+            <div class="row animatedDown"
                 *ngIf="addressForm.controls.actuacionAdelantada.value && addressForm.controls.actuacionAdelantada.value.codigo == '4'">
                 <div class="col-md-12" style="padding-left: 0;">
                     <div>
@@ -174,7 +174,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row"
+            <div class="row animatedDown"
                 *ngIf="addressForm.controls.proximaActuacionRequerida.value && addressForm.controls.proximaActuacionRequerida.value.codigo == '4'">
                 <div class="col-md-12" style="padding-left: 0;">
                     <div class="row">
@@ -187,7 +187,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row"
+            <div class="row animatedDown"
                 *ngIf="addressForm.controls.proximaActuacionRequerida.value && addressForm.controls.proximaActuacionRequerida.value.codigo == '4'">
                 <div class="col-md-12" style="padding-left: 0;">
                     <div>
