--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/form-registrar-controversia-contractua/form-registrar-controversia-contractua.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/form-registrar-controversia-contractua/form-registrar-controversia-contractua.component.html
@@ -38,7 +38,7 @@
         </div>
       </div>
     </div>
-    <div *ngIf="this.selectedContract != ''">
+    <div class="animatedDown" *ngIf="this.selectedContract != ''">
       <mat-card class="shipping-card mainGris">
         <mat-card-header class="header-card">
           <mat-card-title class="header-card--text textoGris"> Datos del contrato </mat-card-title>
