--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/form-registar-actuacion-notai/form-registar-actuacion-notai.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/form-registar-actuacion-notai/form-registar-actuacion-notai.component.html
@@ -100,7 +100,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row"
+            <div class="row animatedDown"
                 *ngIf="addressForm.controls.actuacionAdelantada.value && addressForm.controls.actuacionAdelantada.value.codigo == '4'">
                 <div class="col-md-12" style="padding-left: 0;">
                     <div class="row">
@@ -114,7 +114,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row"
+            <div class="row animatedDown"
                 *ngIf="addressForm.controls.actuacionAdelantada.value && addressForm.controls.actuacionAdelantada.value.codigo == '4'">
                 <div class="col-md-12" style="padding-left: 0;">
                     <div>
@@ -179,7 +179,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row"
+            <div class="row animatedDown"
                 *ngIf="addressForm.controls.proximaActuacionRequerida.value && addressForm.controls.proximaActuacionRequerida.value.codigo == '4'">
                 <div class="col-md-12" style="padding-left: 0;">
                     <div class="row">
@@ -193,7 +193,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row"
+            <div class="row animatedDown"
                 *ngIf="addressForm.controls.proximaActuacionRequerida.value && addressForm.controls.proximaActuacionRequerida.value.codigo == '4'">
                 <div class="col-md-12" style="padding-left: 0;">
                     <div>
