--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/form-registrar-controvrs-accord/form-registrar-controvrs-accord.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/form-registrar-controvrs-accord/form-registrar-controvrs-accord.component.html
@@ -38,7 +38,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row"
+            <div class="row animatedDown"
                 *ngIf="(addressForm.controls.tipoControversia.value && addressForm.controls.tipoControversia.value.codigo == '2') || (addressForm.controls.tipoControversia.value && addressForm.controls.tipoControversia.value.codigo == '3') || (addressForm.controls.tipoControversia.value && addressForm.controls.tipoControversia.value.codigo == '4')">
                 <div class="col-md-6" style="padding-left: 0;">
                     <div class="row">
@@ -73,7 +73,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row"
+            <div class="row animatedDown"
                 *ngIf="(addressForm.controls.tipoControversia.value && addressForm.controls.tipoControversia.value.codigo == '2') || (addressForm.controls.tipoControversia.value && addressForm.controls.tipoControversia.value.codigo == '3') || (addressForm.controls.tipoControversia.value && addressForm.controls.tipoControversia.value.codigo == '4')">
                 <div class="col-md-6" style="padding-left: 0;">
                     <div class="row">
@@ -109,7 +109,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row"
+            <div class="row animatedDown"
                 *ngIf="(addressForm.controls.tipoControversia.value && addressForm.controls.tipoControversia.value.codigo == '1')
             || (addressForm.controls.tipoControversia.value && addressForm.controls.tipoControversia.value.codigo == '5')
             ||(addressForm.controls.tipoControversia.value && addressForm.controls.tipoControversia.value.codigo == '6')
@@ -146,7 +146,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row" *ngIf="addressForm.value.tipoControversia!==null">
+            <div class="row animatedDown" *ngIf="addressForm.value.tipoControversia!==null">
                 <div class="col-md-6" style="padding-left: 0;">
                     <div class="row">
                         <div class="pr-1">
@@ -179,7 +179,7 @@
                     </div>
                 </div>
             </div>
-            <div *ngIf="this.obj1==true">
+            <div class="animatedDown" *ngIf="this.obj1==true">
                 <div class="row">
                     <div class="col-md-12" style="padding-left: 0;">
                         <div class="row">
@@ -223,7 +223,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row"
+            <div class="row animatedDown"
                 *ngIf="addressForm.controls.tipoControversia.value && addressForm.controls.tipoControversia.value.codigo == '1'">
                 <div class="col-md-6" style="padding-left: 0;">
                     <div class="row">
@@ -258,7 +258,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row"
+            <div class="row animatedDown"
                 *ngIf="addressForm.controls.tipoControversia.value && addressForm.controls.tipoControversia.value.codigo == '1'">
                 <div class="col-md-12" style="padding-left: 0;">
                     <div class="row">
@@ -273,7 +273,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row"
+            <div class="row animatedDown"
                 *ngIf="addressForm.controls.tipoControversia.value && addressForm.controls.tipoControversia.value.codigo == '1'">
                 <div class="col-md-12" style="padding-left: 0;">
                     <div>
@@ -303,7 +303,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row"
+            <div class="row animatedDown"
                 *ngIf="addressForm.controls.tipoControversia.value && addressForm.controls.tipoControversia.value.codigo != '1'">
                 <div class="col-md-12" style="padding-left: 0;">
                     <div class="row">
@@ -318,7 +318,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row"
+            <div class="row animatedDown"
                 *ngIf="addressForm.controls.tipoControversia.value && addressForm.controls.tipoControversia.value.codigo != '1'">
                 <div class="col-md-12" style="padding-left: 0;">
                     <div>
@@ -350,7 +350,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row"
+            <div class="row animatedDown"
                 *ngIf="addressForm.controls.tipoControversia.value && addressForm.controls.tipoControversia.value.codigo == '1'">
                 <div class="col-md-6" style="padding-left: 0;">
                     <div class="row">
@@ -380,7 +380,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row"
+            <div class="row animatedDown"
                 *ngIf="addressForm.value.procedeSolicitud===false && (addressForm.controls.tipoControversia.value && addressForm.controls.tipoControversia.value.codigo == '1')">
                 <div class="col-md-12" style="padding-left: 0;">
                     <div class="row">
@@ -394,7 +394,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row"
+            <div class="row animatedDown"
                 *ngIf="addressForm.value.procedeSolicitud===false && (addressForm.controls.tipoControversia.value && addressForm.controls.tipoControversia.value.codigo == '1')">
                 <div class="col-md-12" style="padding-left: 0;">
                     <div>
@@ -424,7 +424,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row"
+            <div class="row animatedDown"
                 *ngIf="addressForm.value.procedeSolicitud===true && (addressForm.controls.tipoControversia.value && addressForm.controls.tipoControversia.value.codigo == '1')">
                 <div class="col-md-6" style="padding-left: 0;">
                     <div class="row">
