--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-seguimiento-diario/components/home/home.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-seguimiento-diario/components/home/home.component.html
@@ -13,9 +13,9 @@
     <button mat-icon-button (click)="verAyuda = false" class="text-info--close">
       <img src="assets/img/icon/cerrar-gris.svg" alt="cerrar ayuda">
     </button>
-    Bienvenida/o, aquí podrá realizar la aprobación con respecto al registro del seguimiento diario que realiza el
+    Bienvenida/o, aquí podrá realizar la Validacion con respecto al registro del seguimiento diario que realiza el
     interventor y que da cuenta del estado de los proyectos de infraestructura frente a las variables: personal,
-    materiales, equipos y productividad para los contratos de obra que tiene asignados, que han sido validados por el
+    materiales, equipos y productividad para los contratos de obra que tiene asignados, que han sido verificados por el
     apoyo a la supervisión y que se encuentran en ejecución en el marco de la gestión del FFIE.
   </div>
 
