Fix front-integracion 4.2.1

--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/control-y-tabla-cc-general/control-y-tabla-cc-general.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/control-y-tabla-cc-general/control-y-tabla-cc-general.component.html
@@ -132,7 +132,7 @@
                             Actualizar trámite
                         </button>
                         <button mat-raised-button color="accent" class="btn-table"
-                            *ngIf="element.estadoControversiaCodigo=='2'"
+                            *ngIf="element.estadoControversiaCodigo=='2'&& element.registroCompletoNombre=='Completo'"
                             (click)=this.registrarControversia(element.controversiaContractualId);>
                             Registrar controversia
                         </button>
