--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/form-registrar-controversia-contractua/form-registrar-controversia-contractua.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/form-registrar-controversia-contractua/form-registrar-controversia-contractua.component.html
@@ -57,7 +57,7 @@
             <strong>Tipo de intervención: </strong> <em>{{ this.tipoIntervencion }}</em>
           </p>
           <p>
-            <strong>Valor del contrato: </strong> <em> {{ this.valorContrato | currency }}</em>
+            <strong>Valor del contrato: </strong> <em> {{ this.valorContrato | currency: 'COP':'symbol-narrow':'.0-0' }}</em>
           </p>
           <p>
             <strong>Plazo: </strong> <em>{{ this.plazoContrato }}</em>
