--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/form-registrar-controvrs-accord/form-registrar-controvrs-accord.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/form-registrar-controvrs-accord/form-registrar-controvrs-accord.component.html
@@ -204,7 +204,7 @@
                                     </quill-editor>
                                 </div>
                                 <span class="contador miles" *ngIf="addressForm.controls.cualOtroMotivo.value">
-                                    {{100 - (textoLimpio(addressForm.get('cualOtroMotivo').value))}}
+                                    {{ 100 - textoLimpio(cualOtroMotivo.quillEditor, 1000) }}
                                 </span>
                                 <span class="contador miles" *ngIf="!addressForm.controls.cualOtroMotivo.value">
                                     100
@@ -285,7 +285,7 @@
                                 </quill-editor>
                             </div>
                             <span class="contador miles" *ngIf="addressForm.controls.conclusionComitePretecnico.value">
-                                {{ 1000 - textoLimpio(addressForm.get('conclusionComitePretecnico').value) }}
+                                {{ 1000 - textoLimpio(conclusionComitePretecnico.quillEditor, 1000) }}
                             </span>
                             <span class="contador miles" *ngIf="!addressForm.controls.conclusionComitePretecnico.value">
                                 1000
@@ -331,7 +331,7 @@
                             </div>
                             <span class="contador miles"
                                 *ngIf="addressForm.controls.resumenJustificacionSolicitud.value">
-                                {{ 1000 - textoLimpio(addressForm.get('resumenJustificacionSolicitud').value) }}
+                                {{ 1000 - textoLimpio(resumenJustificacionSolicitud.quillEditor, 1000) }}
                             </span>
                             <span class="contador miles"
                                 *ngIf="!addressForm.controls.resumenJustificacionSolicitud.value">
@@ -406,7 +406,7 @@
                                 </quill-editor>
                             </div>
                             <span class="contador miles" *ngIf="addressForm.controls.motivosRechazo.value">
-                                {{ 1000 - textoLimpio(addressForm.get('motivosRechazo').value) }}
+                                {{ 1000 - textoLimpio(motivosRechazo.quillEditor, 1000) }}
                             </span>
                             <span class="contador miles" *ngIf="!addressForm.controls.motivosRechazo.value">
                                 1000
