ajustes procesos seleccion

--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/form-seleccion-proponente-a-invitar/form-seleccion-proponente-a-invitar.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/form-seleccion-proponente-a-invitar/form-seleccion-proponente-a-invitar.component.html
@@ -2,8 +2,7 @@
   [formGroup]="addressForm"
   novalidate
   (ngSubmit)="onSubmit()"
-  *ngIf="procesoSeleccion.estadoProcesoSeleccionCodigo == estadosProcesoSeleccion.AprobadaAperturaPorComiteFiduciario"
->
+  *ngIf="sePuedeVer">
   <mat-card class="shipping-card">
     <mat-card-content>
       <div class="row">
