--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-acta-inicio-f-uno-prc/components/generacion-acta-ini-f-i-prc/generacion-acta-ini-f-i-prc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-acta-inicio-f-uno-prc/components/generacion-acta-ini-f-i-prc/generacion-acta-ini-f-i-prc.component.html
@@ -222,6 +222,7 @@
                     min="1"
                     max="99"
                     required
+                    (ngModelChange)="getValueMeses( $event )"
                     (keypress)="number($event)"
                     onKeyPress="if(this.value.length>=this.maxLength) return false;"
                     type="number"
@@ -271,6 +272,7 @@
                     min="1"
                     max="31"
                     required
+                    (ngModelChange)="getValueDias( $event )"
                     (keypress)="number($event)"
                     onKeyPress="if(this.value.length>=this.maxLength) return false;if(this.value>=this.max) return false;"
                     type="number"
